# phaerish

./: README.md  sq_eq.hs  sqeq.cabal
clusters/: FlatClusters.hs  Main.hs
doc/: Effects.lhs  Lambda.lhs  Lazy.hs
exe/: Main.hs
lib/: Hw.hs  ListLazy.hs  Sqeq.hs
list-lazy/: Main.hs
test/: Tests.hs
