cabal-version: 2.2

name: sqeq
version: 0

common language
  build-depends: base
  default-language: Haskell2010

library
  import: language
  exposed-modules: Sqeq, ListLazy
  hs-source-dirs: lib

executable sqeq
  import: language
  build-depends: optparse-applicative, sqeq
  hs-source-dirs: exe
  main-is: Main.hs

executable clusters
  import: language
  build-depends: random, vector
  hs-source-dirs: clusters
  main-is: Main.hs

test-suite tests
  import: language
  build-depends:
    -- global
    tasty,
    tasty-hunit,
    -- package
    sqeq,
  hs-source-dirs: test
  main-is: Tests.hs
  type: exitcode-stdio-1.0
